# deeplearning

./: .gitignore  Alexnet.py  attention.py  lstm.py  resnet.py  rnn.py  rnn_api.py  seq2seq.py  test.py  time_mach.py  transformer.py  vit.py
CrewAI/: .gitignore  README.md
CrewAI/token_flow_project/: .gitignore  README.md  agents.py  check_ollama_502.py  main.py  prompt.txt  requirements.txt  setup_precise_tokens.py  token_counter.py
ai_tool/: README.md  aics.py  pyproject.toml
ai_tool/aics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
experiment/: .gitignore  README.md  design.md  explaination.md  main.py  statics.md
experiment/src/: __init__.py
experiment/src/ra_bias/: __init__.py  agent_loop.py  bias_engine.py  environment.py  evaluation.py  logger.py  models.py  reflection.py  runner.py  selector.py
limu/: Alexnet.py  fra_eng.py  gru.py  resnet.py
minigpt/: README.md  clean_book1.py  generate_corpus_ollama.py  model.py  run.py
token_flow_project/: README.md  config.yaml  main.py  requirements.txt
token_flow_project/agents/: __init__.py  analyst.py  reviewer.py  summarizer.py
token_flow_project/core/: __init__.py  orchestrator.py  prompt_builder.py  registry.py
token_flow_project/experiments/: run_experiment.py
token_flow_project/outputs/prompts/: step_1_prompt.txt
token_flow_project/outputs/research/: communications.csv  multi_task_report.json  (+3 more)
token_flow_project/research/: __init__.py  export_report.py  models.py
token_flow_project/utils/: __init__.py  prompt_trace.py  token_counter.py  token_logger.py  token_plot.py
(+17 files in other folders)
